Removed code smells